--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "vuex": "^2.3.1"
   },
   "devDependencies": {
+    "@types/fs-extra": "^5.0.1",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -86,7 +87,8 @@
     "node-loader": "^0.6.0",
     "pug": "^2.0.1",
     "style-loader": "^0.18.2",
-    "ts-loader": "^4.0.1",
+    "ts-loader": "^3.5.0",
+    "typescript": "^2.7.2",
     "url-loader": "^0.5.9",
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^13.0.5",
