--- a/package.json
+++ b/package.json
@@ -56,10 +56,9 @@
     "jquery": "^3.3.1",
     "pdfjs-dist": "^2.0.428",
     "semantic-ui": "^2.3.0",
-    "vue": "^2.3.3",
+    "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
-    "vue-router": "^2.5.3",
-    "vuex": "^2.3.1"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@types/debug": "0.0.30",
@@ -85,22 +84,23 @@
     "electron-builder": "^19.19.1",
     "electron-debug": "^1.4.0",
     "electron-devtools-installer": "^2.2.0",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",
-    "html-webpack-plugin": "^2.30.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.0.6",
     "multispinner": "^0.2.1",
     "node-loader": "^0.6.0",
     "pug": "^2.0.1",
-    "style-loader": "^0.18.2",
-    "ts-loader": "^3.5.0",
+    "style-loader": "^0.20.3",
+    "ts-loader": "^4.0.1",
     "typescript": "^2.7.2",
-    "url-loader": "^0.5.9",
+    "url-loader": "^1.0.1",
     "vue-html-loader": "^1.2.4",
-    "vue-loader": "^13.0.5",
-    "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.4.2",
-    "webpack": "^3.5.2",
-    "webpack-dev-server": "^2.7.1",
+    "vue-loader": "^14.2.1",
+    "vue-router": "^3.0.1",
+    "vue-style-loader": "^4.0.2",
+    "vue-template-compiler": "^2.5.16",
+    "webpack": "^4.1.1",
+    "webpack-dev-server": "^3.1.1",
     "webpack-hot-middleware": "^2.18.2"
   }
 }
