--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "vue-router": "^3.0.1",
     "vue-style-loader": "^4.0.2",
     "vue-template-compiler": "^2.5.16",
+    "vuedraggable": "^2.16.0",
     "webpack": "^4.1.1",
     "webpack-dev-server": "^3.1.1",
     "webpack-hot-middleware": "^2.18.2"
