--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "axios": "^0.16.1",
     "debug": "^3.1.0",
     "jquery": "^3.3.1",
+    "koa": "^2.5.0",
+    "koa-router": "^7.4.0",
     "pdfjs-dist": "^2.0.428",
     "semantic-ui": "^2.3.0",
     "shortid": "^2.2.8",
@@ -65,6 +67,8 @@
     "@types/debug": "0.0.30",
     "@types/fs-extra": "^5.0.1",
     "@types/jquery": "^3.3.1",
+    "@types/koa": "^2.0.44",
+    "@types/koa-router": "^7.0.27",
     "@types/semantic-ui": "^2.2.6",
     "@types/shortid": "0.0.29",
     "@types/vue-router": "^2.0.0",
