--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "dependencies": {
     "axios": "^0.16.1",
     "debug": "^3.1.0",
+    "fs-extra": "^5.0.0",
     "jquery": "^3.3.1",
     "koa": "^2.5.0",
     "koa-router": "^7.4.0",
