--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "dependencies": {
     "axios": "^0.16.1",
     "debug": "^3.1.0",
+    "dedent": "^0.7.0",
     "fs-extra": "^5.0.0",
     "jquery": "^3.3.1",
     "koa": "^2.5.0",
@@ -65,6 +66,7 @@
   },
   "devDependencies": {
     "@types/debug": "0.0.30",
+    "@types/dedent": "^0.7.0",
     "@types/fs-extra": "^5.0.1",
     "@types/jquery": "^3.3.1",
     "@types/koa": "^2.0.44",
