preliminary support of search

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "baseUrl": ".",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
+    "experimentalDecorators": true,
     "paths": {
       "@/*": ["src/renderer/*"],
       "*": ["node_modules/*"]
