--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "pack": "npm run pack:main && npm run pack:renderer",
     "pack:main": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.main.config.js",
     "pack:renderer": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.renderer.config.js",
-    "postinstall": ""
+    "postinstall": "",
+    "build:ext": "node src/browser/webpack.config.js"
   },
   "build": {
     "productName": "pepper",
@@ -51,12 +52,13 @@
     }
   },
   "dependencies": {
-    "axios": "^0.16.1",
     "debug": "^3.1.0",
     "dedent": "^0.7.0",
     "fs-extra": "^5.0.0",
     "jquery": "^3.3.1",
     "koa": "^2.5.0",
+    "koa-body": "^2.5.0",
+    "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.4.0",
     "pdfjs-dist": "^2.0.428",
     "shortid": "^2.2.8",
@@ -70,10 +72,12 @@
     "@types/fs-extra": "^5.0.1",
     "@types/jquery": "^3.3.1",
     "@types/koa": "^2.0.44",
+    "@types/koa-bodyparser": "^4.2.0",
     "@types/koa-router": "^7.0.27",
     "@types/semantic-ui": "^2.2.6",
     "@types/shortid": "0.0.29",
     "@types/vue-router": "^2.0.0",
+    "axios": "^0.16.2",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-runtime": "^6.23.0",
