--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
+    "no-shadowed-variables": false,
     "paths": {
       "@/*": ["src/renderer/*"],
       "*": ["node_modules/*"]
