--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "dedent": "^0.7.0",
     "fs-extra": "^5.0.0",
     "jquery": "^3.3.1",
+    "jsonminify": "^0.4.1",
     "koa": "^2.5.0",
     "koa-body": "^2.5.0",
     "koa-bodyparser": "^4.2.0",
@@ -71,6 +72,7 @@
     "@types/dedent": "^0.7.0",
     "@types/fs-extra": "^5.0.1",
     "@types/jquery": "^3.3.1",
+    "@types/jsonminify": "^0.4.0",
     "@types/koa": "^2.0.44",
     "@types/koa-bodyparser": "^4.2.0",
     "@types/koa-router": "^7.0.27",
