--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@types/koa": "^2.0.44",
     "@types/koa-bodyparser": "^4.2.0",
     "@types/koa-router": "^7.0.27",
+    "@types/pdfjs-dist": "^0.1.2",
     "@types/semantic-ui": "^2.2.6",
     "@types/shortid": "0.0.29",
     "@types/vue-router": "^2.0.0",
